<resources>
    <!--Generic string-->
    <string name="app_name">Figuritas</string>
    <string name="name">FIGURITAS</string>

    <!--Main Activity-->
    <string name="btnIniciar">Iniciar sesión</string>
    <string name="btnRegistro">Registrate</string>
    <string name="btnIniciar_niveles">Iniciar</string>
    <string name="btnConfiguracion">Configuración</string>

    <!--Session Activity-->
    <string name="inicio_sesion">Inicio de sesión</string>
    <string name="Iniciar">Entrar</string>
    <string name="olvidaste">¿Olvidaste tu contraseña?</string>

    <!--Register Activity-->
    <string name="registro_usuario">Registro de usuario</string>
    <string name="registrar">Registrar</string>
    <string name="descartar">Descartar</string>
    <string name="nombre">Nombre</string>
    <string name="apell_p">Apellido Paterno</string>
    <string name="apell_m">Apellido Materno</string>
    <string name="edad">Edad</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>

    <!--Level Activity-->
    <string name="bonus_default">x0</string>
    <string name="time_default">00:00</string>

    <!--Init Config-->
    <string name="seleccionar_color">Selecciona un color</string>
    <string name="seleccionar_sonido">Configuración de audio</string>
    <string name="seleccionar_nivel">Nivel de dificultad</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_facil">Fácil</string>
    <string name="btn_normal">Normal</string>
    <string name="btn_dificil">Difícil</string>
    <string name="sonido">Sonido</string>
    <string name="musicoterapia">Musicoterapia</string>
    <string name="configuracion">Configuración</string>
    <string name="configuracion_guardada">¡Configuración guardada con exito!</string>

    <!--Name colors-->
    <string name="AMBER">#FFC107</string>
    <string name="CYAN">#00BCD4</string>
    <string name="PINK">#FF4081</string>
    <string name="ORANGE">#FF8000</string>
    <string name="RED">#F44336</string>
    <string name="GREEN">#ACAF50</string>
    <string name="LIGHT_BLUE">#03A9F4</string>
    <string name="WHITE">#FFFFFF</string>

    <!--DialogAlters-->
    <string name="aceptar">Aceptar</string>
    <string name="confirmacion_salir">¿Seguro que quiere salir?</string>
    <string name="cancelar">Cancelar</string>
    <string name="message_exit_config">"Todos los cambios hechos sin guardar serán ignorados al salir "</string>
    <string name="nivel_completado">Nivel completado</string>
    <string name="tiempo_total">Tiempo total</string>
    <string name="bonus_obtenido">Bonificación</string>
    <string name="total_figuras">Total de figuras</string>
    <string name="resumen_nivel">Resumen del nivel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>