<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewGroupLevel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iu.config.LevelFragment">

    <TextView
        android:id="@+id/txtTitleLevel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#5C6BC0"
        android:text="@string/seleccionar_nivel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/AMBER"/>

    <Button
        android:id="@+id/btnFacil"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btn_facil"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/WHITE"
        android:background="@drawable/button_background_circle"
        android:backgroundTint="@color/LIGHT_BLUE"
        app:layout_constraintBottom_toBottomOf="@+id/btnNormal"
        app:layout_constraintEnd_toStartOf="@+id/btnNormal"
        app:layout_constraintTop_toTopOf="@+id/btnNormal"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnNormal"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/btn_normal"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/WHITE"
        android:background="@drawable/button_background_circle"
        android:backgroundTint="@color/AMBER"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDificil"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="50dp"
        android:text="@string/btn_dificil"
        android:textAllCaps="false"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/WHITE"
        android:background="@drawable/button_background_circle"
        android:backgroundTint="@color/RED"
        app:layout_constraintBottom_toBottomOf="@+id/btnNormal"
        app:layout_constraintStart_toEndOf="@+id/btnNormal"
        app:layout_constraintTop_toTopOf="@+id/btnNormal" />

    <Button
        android:id="@+id/btnNextLevel"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"
        android:text="@string/btn_guardar"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/WHITE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="@color/AMBER_ANALOGO"/>

</androidx.constraintlayout.widget.ConstraintLayout>