<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iu.session.RegisterActivity">

    <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/registro_usuario"
    android:textSize="32sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.501"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                app:layout_constraintBottom_toTopOf="@+id/editNombre"
                app:layout_constraintEnd_toEndOf="@+id/editNombre"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editNombre" />

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtApellidoP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apell_p"
                app:layout_constraintBottom_toTopOf="@+id/editApellidoP"
                app:layout_constraintEnd_toEndOf="@+id/editApellidoP"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editApellidoP" />

            <EditText
                android:id="@+id/editApellidoP"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editNombre" />

            <TextView
                android:id="@+id/txtApellidoM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apell_m"
                app:layout_constraintBottom_toTopOf="@+id/editApellidoM"
                app:layout_constraintEnd_toEndOf="@+id/editApellidoM"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editApellidoM" />

            <EditText
                android:id="@+id/editApellidoM"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editApellidoP" />


            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:layout_constraintBottom_toTopOf="@+id/editEmail"
                app:layout_constraintEnd_toEndOf="@+id/editEmail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editEmail" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editApellidoM" />

            <TextView
                android:id="@+id/txtContrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrasena"
                app:layout_constraintBottom_toTopOf="@+id/editContrasena"
                app:layout_constraintEnd_toEndOf="@+id/editContrasena"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editContrasena" />

            <EditText
                android:id="@+id/editContrasena"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editEmail" />

            <TextView
                android:id="@+id/txtInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:text="Todos los derechos quedan reservados para la fundación"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editContrasena" />

            <Button
                android:id="@+id/btnDescartar"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="106dp"
                android:text="@string/descartar"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@+id/txtInfo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.29"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editContrasena" />

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:text="@string/registrar"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/btnDescartar"
                app:layout_constraintStart_toEndOf="@+id/btnDescartar"
                app:layout_constraintTop_toTopOf="@+id/btnDescartar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>