<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    tools:context=".iu.home.HomeWithoutSessionFragment">

    <ImageView
        android:id="@+id/imgStartBack3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_star_backgroud"
        app:layout_constraintBottom_toTopOf="@+id/txtTitle3"
        app:layout_constraintEnd_toEndOf="@+id/txtTitle3"
        app:layout_constraintStart_toStartOf="@+id/txtTitle3" />

    <TextView
        android:id="@+id/txtTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/name"
        android:textColor="#C66BA7"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIniciarSesionFragment"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/background_button"
        android:text="@string/btnIniciar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle3" />

    <Button
        android:id="@+id/btnRegistrateFragment"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_button"
        android:text="@string/btnRegistro"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnIniciarSesionFragment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnIniciarSesionFragment"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesionFragment" />

</androidx.constraintlayout.widget.ConstraintLayout>