<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/viewGroupSound"
    tools:context=".iu.config.SoundFragment">

    <TextView
        android:id="@+id/txtTitleSound"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#5C6BC0"
        android:text="@string/seleccionar_sonido"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/AMBER"/>


    <TextView
        android:id="@+id/txtSonidoInitConfig"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="140dp"
        android:text="@string/sonido"
        android:textColor="@color/AMBER"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtMusicaInitConfig"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/musicoterapia"
        android:textColor="@color/AMBER"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtSonidoInitConfig"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtSonidoInitConfig"
        app:layout_constraintTop_toBottomOf="@+id/txtSonidoInitConfig" />

    <SeekBar
        android:id="@+id/seekBarMusicaInitConfig"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:max="100"
        android:maxHeight="12dp"
        android:minHeight="7dp"
        android:progress="50"
        android:progressDrawable="@drawable/seekbar_personalizado"
        android:soundEffectsEnabled="true"
        android:thumb="@drawable/seekbar_icon"
        app:layout_constraintBottom_toBottomOf="@+id/txtMusicaInitConfig"
        app:layout_constraintStart_toEndOf="@+id/txtMusicaInitConfig"
        app:layout_constraintTop_toTopOf="@+id/txtMusicaInitConfig"
        app:layout_constraintVertical_bias="0.0" />

    <SeekBar
        android:id="@+id/seekBarSoundInitConfig"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:max="100"
        android:maxHeight="12dp"
        android:minHeight="7dp"
        android:progress="70"
        android:progressDrawable="@drawable/seekbar_personalizado"
        android:soundEffectsEnabled="true"
        android:thumb="@drawable/seekbar_icon"
        app:layout_constraintBottom_toBottomOf="@+id/txtSonidoInitConfig"
        app:layout_constraintStart_toEndOf="@+id/txtSonidoInitConfig"
        app:layout_constraintTop_toTopOf="@+id/txtSonidoInitConfig" />

    <ImageButton
        android:id="@+id/btnSoundNowInitConfig"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_background_circle"
        android:backgroundTint="@color/AMBER"
        android:scaleType="center"
        android:src="@drawable/ic_volume"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarSoundInitConfig"
        app:layout_constraintStart_toEndOf="@+id/seekBarSoundInitConfig"
        app:layout_constraintTop_toTopOf="@+id/seekBarSoundInitConfig" />

    <Button
        android:id="@+id/btnNextSounds"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"
        android:text="@string/btn_siguiente"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/WHITE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="@color/AMBER_ANALOGO"/>

</androidx.constraintlayout.widget.ConstraintLayout>